Implement driver, fix wind speed conversion in gov